--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
+    "brain.js": "^2.0.0-beta.23",
+    "framer-motion": "^10.16.5",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-springs": "^1.1.0",
+    "react-use": "^17.4.0",
+    "transition-hook": "^1.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
